//
// Copyright 2025 Signal Messenger, LLC.
// SPDX-License-Identifier: AGPL-3.0-only
//

syntax = "proto3";

package svrb.backup_metadata;

import "proto/backup4.proto";

message MetadataPb {
  message Pair {
    bytes ct = 1;
    bytes pw_salt = 2;
  }
  // newest are first
  repeated Pair pair = 1;
}

message NextBackupPb {
  bytes pw_salt = 1;
  backup4.Backup4 backup4 = 2;
}
